--- a/templates/base.html
+++ b/templates/base.html
@@ -117,6 +117,32 @@
                             <li>
                                 {% include "stores/components/store_switcher.html" %}
                             </li>
+                            {% if user.is_authenticated %}
+                            <li>
+                                <div class="relative" x-data="{ open: false }">
+                                    <button @click="open = !open" class="flex items-center text-primary hover:underline font-medium text-lg">
+                                        {{ user.username }}
+                                        <svg class="ml-1 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                            <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                                        </svg>
+                                    </button>
+                                    <div x-show="open" 
+                                         @click.away="open = false"
+                                         class="absolute right-0 mt-2 w-48 bg-card rounded-md shadow-lg py-1 z-50">
+                                        {% if user.is_staff %}
+                                        <a href="{% url 'admin:index' %}" class="block px-4 py-2 text-theme hover:bg-theme-secondary">Admin</a>
+                                        {% endif %}
+                                        <a href="{% url 'logout' %}" class="block px-4 py-2 text-theme hover:bg-theme-secondary">Logout</a>
+                                    </div>
+                                </div>
+                            </li>
+                            {% else %}
+                            <li>
+                                <a href="{% url 'login' %}" class="text-primary hover:underline font-medium text-lg">
+                                    Login
+                                </a>
+                            </li>
+                            {% endif %}
                         </ul>
                     </nav>
                 </div>
